[package]
name = "rust-cfd-tester"
version = "0.0.1"
authors = ["k-matsuzawa <matsuzawa@cryptogarage.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfd-rust = { git = "https://github.com/cryptogarageinc/cfd-rust", branch = "feature/initial-commit" }
bitcoin = "0.23.0"
secp256k1 = "0.17.2"
hex = "0.4.2"
